fixed long push on skip btn on mobile does not work + input shape when wrong

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -98,6 +98,7 @@
 }
 
 button {
+  user-select: none;
   background-color:$blue;
   border: transparent 1px;
   height: 2rem;
